@@ -1,4 +1,6 @@
 DIST duplicati-bin-2.0.2.1_beta20170801.rpm 7447686 SHA256 572a8a341a0783ed952a02ed9307f709d06e0f2004e13f626eb00ae3c554cb84 SHA512 372603b8e48111e430403421ac8c611932534e5343564abf4c9ebf297b002de83d771cda4544c59a78d6faf3b794882265a75c669f19f17f2c6fb91fa64e16b5 WHIRLPOOL aecbe49812f57551943d86916ee4d7d60e478e2ebb2bd738f1a9088e924de423d22b5d0a3b8334edd2870a3903a0c16f89f7341f41df78477ca222c9e4a30ff2
+DIST duplicati-bin-2.0.3.3_beta20180402.rpm 7721946 SHA256 21c01fdae9a41fc2780f59c956422c99c7404c61e203bc41a1c3d18eb5c760f8 SHA512 79cb885700246aeffb3167f06500073c153a470dfe62938ef3f5a3dd608de4882f8b437bf34541500a68b24cb64938da224cdb6f3205ab53fe2a5b9a90367201 WHIRLPOOL e435c022549c723fecfb9b693110645e6f6e8c04199700c160a73fab3c168bada95b55da298fae66c2fa23b61ff7c3f0b9e3c5c7f819de4b1708af4a95500e31
 EBUILD duplicati-bin-2.0.2.1_beta20170801-r1.ebuild 810 SHA256 5fa5e948629f799ad9bde6358b6eb675db1967ea374366ab580c4726c28d3d43 SHA512 63d09f04a6929601455df4c2d09ee016d06f9bac14ec348613d96e3102e6caa507b2d63d8eb8cff95acff861221e338cec4c0ed3ab79d11a3c616556cf3d1a3f WHIRLPOOL 219024aa14404567144c8011fafb4da9ae310c6f0b69c4918e052f767864783f2f809872a5bd47fe352945c60e50f29956317b075499b66e37765c160238687b
-MISC ChangeLog 920 SHA256 1ce948495ec1a91c5fbf6b010e6024fd1c0c6078cb57b942a690df1fe5929bb5 SHA512 7b04aa90d55f36f0cf46ccca6f9733c5c9603ad0dc7afa2af72e2f43cc20a6595bb9d89a8c6b87d34ba03f94bd422edd58da60e787af6177d75e5f62994982d3 WHIRLPOOL aa0aa635667ecb7d16803c57be6cc613989e6c88b35a08f9877ee2449230633fbbb6e565900f80895764916818f9f43b4632c8b75f44425764b21ead1196689a
+EBUILD duplicati-bin-2.0.3.3_beta20180402.ebuild 810 SHA256 547d3837beecd47c8af8959cf13424cfed0fe64d509847795dc5219f261e3840 SHA512 6219b17de7b683961e1db84f9f050518d8170b30c84ef6bf71d350ce2f479c333ff981d074597088acd935fd299c433693eb57c8597e34b9f41c1c4e5402cf96 WHIRLPOOL 85f4a2bccef219daba9cb9411a23b1187a8bb3ea53c89070c1cb97d616a1e700290e68adfd2fba61e1dec1689a21fde8c6310d03288774bbe40cbf3af575777b
+MISC ChangeLog 1135 SHA256 8cb1984eb54464e4d98262e51c0a3193d8da3f723a5b5fbcf437e8f4ca9d29f4 SHA512 023d26cc4c8cb2764acacc3fd74c7fd0437dbae96f44d507987d899fbe00a917c5d9195540e3e31fd7a670f236d59d60bc0254d64df985aabd041feec7e8661e WHIRLPOOL 8da4e8d131a49c285caf7d7f1d40d4e7199ca7b3b353b3c7b55d3c9b7cf6ee5b113f0a3551a85dde8feafcdc9be1e51293ff5fa578fc388c30417b9f6cbcf453
 MISC metadata.xml 248 SHA256 7b43be15755627edf5c12cf1b50c607d781558640bf8375d685d51d7ade99a32 SHA512 29f9b96b0a77546cce6a8bffd82fae2fd0939d32a7a05ffd0d91f9250a019a3ddaa599b93988c82daabb9c4c4b284dd947e2c47f6ca7727b8539cffa91bcb8c2 WHIRLPOOL 993013c9878ead35469db13d3072f694a341ee654182e0c31d0678f5dd6de4bdc8d59a0b7bb6d685dc41ea6b55dac518cd8034131baea8002170c680e50304d1
